--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+flutter_launchere_name:
+  name: "Family Tracker"
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
